<resources>
    <string name="app_name">DemoApp</string>
    <string name="button">Button</string>
    <string name="textoInformacion">Selecciona la operación que deseas realizar con los dos números</string>
    <string name="radioDivision">División</string>
    <string name="radioMultiplicacion">Multiplicación</string>
    <string name="radioResta">Resta</string>
    <string name="radioSuma">Suma</string>
    <string name="onClickOperar">Operar</string>
</resources>
