<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:text="@string/textoInformacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textoInformacion"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textoInformacion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/myRadiogroup" >

        <RadioButton
            android:text="@string/radioSuma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioSuma"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioResta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioResta"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioMultiplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioMultiplicacion"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/radioDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioDivision"
            android:layout_weight="1" />

    </RadioGroup>

    <View
        android:id="@+id/linea"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:background="#aa5f5f5f" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/linea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:id="@+id/editNumeroA"
        android:hint="x" />

    <TextView
        android:text="+"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/editNumeroA"
        android:layout_toEndOf="@+id/editNumeroA"
        android:id="@+id/textoOperador"
        android:layout_alignTop="@+id/editNumeroA"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_alignBottom="@+id/editNumeroA"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignBottom="@+id/textoOperador"
        android:layout_toRightOf="@+id/textoOperador"
        android:layout_marginTop="@+id/textoOperador"
        android:gravity="center_horizontal"
        android:id="@+id/editNumeroB"
        android:text="y" />

    <TextView
        android:text="="
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textequals"
        android:layout_alignTop="@+id/editNumeroB"
        android:layout_toRightOf="@+id/editNumeroB"
        android:layout_toEndOf="@+id/editNumeroB"
        android:layout_alignBottom="@+id/editNumeroB"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:gravity="center_vertical"/>

    <TextView
        android:text="\?"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textequals"
        android:layout_toRightOf="@+id/textequals"
        android:layout_toEndOf="@+id/textequals"
        android:id="@+id/textResult"
        android:layout_marginLeft="30dp"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/textequals"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:text="@string/onClickOperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickOperar"
        android:id="@+id/onClickOperar" />

</RelativeLayout>
